fixed alignments in store.info + storeInfoPlaceholder in home.info

--- a/src/css/frontend.css
+++ b/src/css/frontend.css
@@ -9635,8 +9635,11 @@ aside.infoNavigation ul li.active {
 .content.info .container article#infoStoreContact .icn.iFacebook {
   margin-right: 0;
 }
+.content.info .container article#howItWorks {
+  margin-top: 0;
+}
 .content.info .container article#howItWorks div {
-  margin-right: 30px;
+  margin: 0 30px 0 0;
   text-align: center;
 }
 .content.info .container article#impressum {
@@ -9646,9 +9649,9 @@ aside.infoNavigation ul li.active {
 .content.info .container article#storeInfoPlaceholder {
   font-size: 60px;
   font-family: "VAGRoundedStd-Thin";
-  color: rgba(0, 0, 0, 0.65);
+  color: rgba(0, 0, 0, 0.6);
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.15);
-  margin: 70px 0;
+  margin: 10% 0 0;
   line-height: 1.2;
   overflow: hidden;
 }
@@ -9710,6 +9713,9 @@ aside.infoNavigation ul li.active {
 .content.info .container .weekday .openingHours p:first-child {
   margin-right: 7px;
   width: 58px;
+}
+.content.info .container#homeInfo:first-child #howItWorks {
+  margin-top: 100px;
 }
 #error404 {
   position: absolute;
